added mkdocs to poetry

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,11 +12,14 @@ matplotlib = "^3.8.1"
 pyvisa-py = "^0.7.1"
 pyserial = "^3.5"
 click = "^8.1.7"
+mkdocs = "^1.5.3"
+mkdocstrings = {extras = ["python"], version = "^0.24.0"}
+mkdocs-material = "^9.4.10"
 
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
 
 [tool.poetry.scripts]
-view = "pythondaq.view:main"
+view = "pythondaq.view:run"
 diode = "pythondaq.cli:cmd_group"
