--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,8 @@ click = "^8.1.7"
 mkdocs = "^1.5.3"
 mkdocstrings = {extras = ["python"], version = "^0.24.0"}
 mkdocs-material = "^9.4.10"
+rich = "^13.7.0"
+pandas = "^2.1.3"
 
 [build-system]
 requires = ["poetry-core"]
