--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,7 @@ authors = ["M-Serrano-Altena <Marc.Serrano.Altena@gmail.com>"]
 readme = "README.md"
 
 [tool.poetry.dependencies]
-python = "^3.10"
+python = ">=3.10, <3.13"
 numpy = "^1.26.2"
 matplotlib = "^3.8.1"
 pyvisa-py = "^0.7.1"
@@ -17,6 +17,9 @@ mkdocstrings = {extras = ["python"], version = "^0.24.0"}
 mkdocs-material = "^9.4.10"
 rich = "^13.7.0"
 pandas = "^2.1.3"
+pyside6 = "^6.6.0"
+pyqtgraph = "^0.13.3"
+
 
 [build-system]
 requires = ["poetry-core"]
